mengubah sedikit tampilan

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel</title>
+    <title>Parawisata Grobongan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Asset/css/">
     <link rel="stylesheet" href="font-awesome-4.7.0/css">
@@ -63,6 +63,10 @@
     </div>
 
     <!--Garis Pembatas-->
+    <div class="kotak-2">
+        <li class="container page-item" style="list-style: none; padding: 5px;">Home > <a class="" href="#">  Home</a></li>
+    </div>
+    
     <div class="kotak"></div>
     <!--card-->
 
@@ -125,6 +129,9 @@
         </div>
     </div>
     <div class="kotak"></div>
+    <!--Page-->
+
+
 
     <!--Fooster-->
 
